--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,15 @@
 
+:root {
+    --celeste: #5fa2e6;
+    --verde: #71b100;
+    --blanco: #ffffff;
+    --cafe: #333333;
+    --claro: #f5f5f5;
+    --gris: #b5b5b5;
+    --negro: #000000;
+}
+
+
 html{
     box-sizing: border-box;
     font-size: 62.5%; /** Reset para REMS - 62.5% = 10px de 16px --- 1 rem = 16px **/
@@ -8,7 +19,7 @@ html{
 }
 
 body{
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     max-width: 100%;
@@ -27,19 +38,22 @@ img{
 
 .contenedor{
     width: 95%;
-    max-width: 100rem;
+    max-width: 120rem;
     margin: 0 auto ;
 }
 
 h1{
     font-size: 3rem;
 }
+
 h2{
     font-size: 2.6rem;
 }
+
 h3{
     font-size: 2.2rem;
 }
+
 h4{
     font-size: 1.8rem;
 }
@@ -53,7 +67,7 @@ h4{
 }
 
 .fw300{
-    font-weight: 300;
+    font-weight: normal;
 }
 
 .centrartexto{
@@ -72,12 +86,12 @@ h4{
 /* Botones */
 
 .boton{
-    color: #ffffff;
+    color: var(--blanco);
     font-weight: 500;
     text-decoration: none;
-    padding: .5rem 2rem;
+    padding: .8rem 2.5rem;
     display: inline-block;
-    margin-top: 1.5rem;
+    /* margin-top: 1.5rem; */
     text-align: center;
     border: none;
 }
@@ -87,18 +101,27 @@ h4{
 }
 
 .boton-verde{
-    background-color: #71b100;
+    background-color:var(--verde);
+    transition: 500ms;
+}
+
+.boton-verde:hover {
+    background-color: #5b8b09;
 }
 
 .boton-azul{
-    background-color: #73B0EB;
+    background-color: var(--celeste);
+}
+
+.boton-azul:hover {
+    background-color: #528cc7;
 }
 
 
 /* Header */
 
 .header-sitio{
-    background-color: #333333;
+    background-color: var(--cafe);
     padding: 1rem 0 2rem 0;
     margin: 0;
 }
@@ -118,6 +141,7 @@ h4{
     justify-content: space-between;
     text-align: center;
 }
+
 @media (min-width: 768px) {
     .separador-header{
         text-align: left;
@@ -125,7 +149,7 @@ h4{
 }
 
 .separador-header h1{
-    color: #ffffff;
+    color: var(--blanco);
     padding-bottom: 2rem;
     max-width: 60rem;
 }
@@ -136,6 +160,7 @@ h4{
     align-items: center;
     padding-top: 2rem;
 }
+
 @media (min-width: 768px) {
     .barra{
         display: flex;
@@ -146,12 +171,12 @@ h4{
 /* Barra de Navegación */
 
 .navegacion a{
-    color: #ffffff;
+    color: var(--blanco);
     text-decoration: none;
     font-size: 2.2rem;
-    font-family: 'Poiret One', cursive;
     display: block;
 }
+
 @media (min-width: 768px) {
     .navegacion a{
         display: inline;
@@ -164,7 +189,7 @@ h4{
 }
 
 .navegacion a:hover{
-    color: #73B0EB;
+    color: var(--celeste);
 }
 
 
@@ -174,6 +199,7 @@ h4{
     display: block;
     justify-content: space-between;
 }
+
 @media (min-width: 768px) {
     .iconos-nosotros{
         display: flex;
@@ -183,6 +209,7 @@ h4{
 .iconos{
     text-align: center;
 }
+
 @media (min-width: 768px) {
     .iconos{
         flex-basis: calc( 33.3% - 1rem );
@@ -201,6 +228,7 @@ h4{
     justify-content: space-between;
     flex-wrap: wrap;
 }
+
 @media (min-width: 768px) {
     .contenedor-anuncios{
         display: flex;
@@ -210,10 +238,11 @@ h4{
 }
 
 .anuncios{
-    border: 1px solid #b5b5b5;
-    background-color: #f5f5f5;
+    border: 1px solid var(--gris);
+    background-color: var(--claro);
     margin-bottom: 2rem;
 }
+
 @media (min-width: 768px) {
     .anuncios{
         flex: 0 0 calc( 33.3% - 1rem );
@@ -227,12 +256,11 @@ h4{
 
 .contenido-anuncio h3,
 .contenido-anuncio p{
-    margin: 0;
+    margin: 0 0 1rem 0;
 }
 
 .precio{
-    color: #73B0EB;
-    font-weight: 500;
+    color: var(--celeste);
 }
 
 .iconos-caracteristicas-casas{
@@ -242,6 +270,12 @@ h4{
     display: flex;
     flex: 1;
     justify-content: space-evenly;
+}
+
+.iconos-caracteristicas-casas p {
+    margin: 0;
+    display: flex;
+    align-items: center;
 }
 
 .iconos-caracteristicas-casas li{
@@ -270,7 +304,7 @@ h4{
 }
 
 .contenido-contacto{
-    color: #ffffff;
+    color: var(--blanco);
     flex: 0 0 95%;
 }
 
@@ -299,6 +333,7 @@ h4{
 .entrada-blog{
     margin-bottom: 2rem;
 }
+
 @media (min-width: 768px) {
     .entrada-blog{
         display: flex;
@@ -330,36 +365,38 @@ h4{
     display: block;
     width: 15rem;
     height: .5rem;
-    background-color: #71b100;
+    background-color: var(--verde);
     margin-top: 1.5rem;
 }
 
 .texto-blog a{
-    color: #000000;
+    color: var(--negro);
     text-decoration: none;
+    transition: 300ms;
 }
 
 .texto-blog a:hover{
-    color: #71b100;
+    color: var(--verde);
 }
 
 .texto-blog span{
-    color: #73B0EB;
+    color: var(--celeste);
 }
 
 
 /* Testimoniales */
 
 .testimonial{
-    background-color: #71b100;
+    background-color: var(--verde);
     font-size: 2rem;
     padding: 1rem;
-    color: #ffffff;
+    color: var(--blanco);
     border-radius: 2.5rem;
 }
 
 .testimonial p{
     text-align: right;
+    margin-right: 2rem;
 }
 
 .testimonial blockquote::before{
@@ -368,12 +405,13 @@ h4{
     width: 4rem;
     height: 4rem;
     position: absolute;
-    left: -2rem;
+    left: -3rem;
 }
 
 .testimonial blockquote{
     position: relative;
-    padding-left: 5rem;
+    text-align: justify;
+    padding-left: 3rem;
     font-weight: 300;
 }
 
@@ -381,7 +419,7 @@ h4{
 /* Footer */
 
 .site-footer{
-    background-color: #333333;
+    background-color: var(--cafe);
     margin: 0;
 }
 
@@ -400,6 +438,7 @@ h4{
 .site-footer nav{
     display: none;
 }
+
 @media (min-width: 768px) {
     .site-footer nav{
         display: block;
@@ -408,7 +447,7 @@ h4{
 
 .copyright{
     margin: 0;
-    color: #ffffff;
+    color: var(--blanco);
 }
 
 
@@ -448,7 +487,11 @@ h4{
 
 legend{
     font-size: 2rem;
-    color: #5E6166;
+    color: var(--cafe);
+}
+
+.contacto fieldset:nth-child(3) {
+    margin-bottom: 2rem;
 }
 
 .contacto p{
@@ -467,7 +510,7 @@ select
     padding: 1rem;
     display: block;
     width: 100%;
-    background-color: #e1e1e1;
+    background-color: var(--claro);
     margin-bottom: 2rem;
     border: none;
     border-radius: 1rem;
